--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div id="login-screen">
         <i class="fab fa-spotify text-7xl text-[#1DB954] mb-8 animate-pulse"></i>
-        <h1 class="text-3xl font-black italic mb-10 text-white text-center">RIZAL<span class="text-[#1DB954]">MUSIC</span><br><span class="text-xs font-normal not-italic text-zinc-500">DKV EDITION</span></h1>
+        <h1 class="text-3xl font-black italic mb-10 text-white text-center">RIZAL<span class="text-[#1DB954]">MUSIC</span><br><span class="text-xs font-normal not-italic text-zinc-500">LITE EDITION</span></h1>
         <button onclick="loginGoogle()" class="bg-[#1DB954] text-black font-bold px-10 py-4 rounded-full flex items-center gap-3 active:scale-95 transition">
             <i class="fab fa-google"></i> LOGIN WITH GOOGLE
         </button>
